[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["Noogen Team <info.noogen@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/{{project-name}}"
description = "A Rust library that implements a ..."
keywords = ["noogen"]
categories = []
exclude = [
    ".git-pre-push.sh",
]

[dependencies]
